# nebulaterm-ai

./: .gitignore  App.tsx  README.md  generate_icon.py  index.css  index.html  metadata.json  package-lock.json  package.json  simple.test.ts  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
components/: AboutModal.tsx  SSHKeyManager.tsx  ServerList.tsx  SettingsModal.tsx  TabBar.tsx  Terminal.tsx  UnlockPrompt.tsx
scripts/: build_unix.sh  build_windows.bat
services/: aiService.ts  geminiService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  secure_storage.rs  windows_pty.rs
tests/: AboutModal.test.tsx  aiService.test.ts
